Updates to front-page and elsewhere.

--- a/_posts/2014-06-18-SF-Hikes-1.markdown
+++ b/_posts/2014-06-18-SF-Hikes-1.markdown
@@ -1,6 +1,6 @@
 ---
 layout: itinerary
-title:  SF Hikes 1
+title:  SF Hikes
 date:   2014-06-18 10:10:32
 categories: itinerary hike
 cost_per_person: 15
